# python-publicsuffix2

./: .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.rst  ChangeLog  HISTORY  LICENSE  MANIFEST.in  README  README.rst  UseCases.md  publicsuffix.py  publicsuffix2.LICENSE  setup.cfg  setup.py  tests.py  tests_mozilla.py  tests_scenarios.py
src/publicsuffix/: __init__.py  origin.ABOUT  public_suffix_list.ABOUT
src/publicsuffix2/: __init__.py  public_suffix_list.ABOUT
