[bdist_wheel]
universal = 1

[metadata]
license_file = publicsuffix2.LICENSE

[aliases]
release = clean --all sdist --formats=bztar,zip,gztar bdist_wheel register upload 

[pytest]
norecursedirs = 
	.git
	.tox
	.cache
	dist
	build
	thirdparty
	local
	ci
	docs
	etc
	Include
	include
	Lib
	lib
	bin
	Scripts
	tmp
python_files = *.py
python_classes = Test
python_functions = test
addopts = 
	-rfEsxX
	--strict
	-s
	-vv
	--ignore setup.py

