[bdist_wheel]
universal = 1

[metadata]
license_filea =
    publicsuffix2.LICENSE
    AUTHORS.rst
    CHANGELOG.rst
    README.rst

[aliases]
release = clean --all sdist --formats=bztar,zip,gztar bdist_wheel register upload 

[tool:pytest]
norecursedirs = 
	.git
	.tox
	.cache
	dist
	build
	thirdparty
	local
	ci
	docs
	etc
	Include
	include
	Lib
	lib
	bin
	Scripts
	tmp
	.eggs

python_files = *.py
python_classes = Test
python_functions = test
addopts = 
	-rfEsxX
	--strict
	-s
	-vv
	--ignore setup.py
